# handlers/types.go
@@ -268,6 +268,12 @@ type ExchangeConnectionResponse struct {
 	Exchange string `json:"exchange" example:"ex_jkdfkjdfkdfjkd"`
 	// Full AMQP URL for connection
 	AMQPURL string `json:"amqp_url" example:"amqp://acc_1234567890:sample_account_token@localhost:5672/acc_1234567890"`
+	// Host for AMQP connection
+	Host string `json:"host" example:"localhost"`
+	// Port for AMQP connection
+	Port string `json:"port" example:"5672"`
+	// Protocol for AMQP connection
+	Protocol string `json:"protocol" example:"AMQP"`
 	// Message indicating successful retrieval
 	Message string `json:"message" example:"Exchange connection details retrieved successfully"`
 }
@@ -284,6 +290,12 @@ type QueueConnectionResponse struct {
 	Exchange string `json:"exchange" example:"ex_jkdfkjdfkdfjkd"`
 	// Full AMQP URL for connection
 	AMQPURL string `json:"amqp_url" example:"amqp://acc_1234567890:sample_account_token@localhost:5672/acc_1234567890"`
+	// Host for AMQP connection
+	Host string `json:"host" example:"localhost"`
+	// Port for AMQP connection
+	Port string `json:"port" example:"5672"`
+	// Protocol for AMQP connection
+	Protocol string `json:"protocol" example:"AMQP"`
 	// Binding key or routing key for queue operations
 	BindingKey string `json:"binding_key" example:"ex_jkdfkjdfkdfjkd.237.62401"`
 	// Message indicating successful retrieval
